opam-version: "2.0"
version: "1.0"
maintainer: "ilya.sergey@yale-nus.edu.sc"
homepage: "https://ilyasergey.net/YSC2229/"
dev-repo: "git://github.com:ilyasergey/ysc2229-part-two.git"
bug-reports: "https://github.com/ilyasergey/ysc2229-part-two/issues"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [ ]

description: "Libraries with the implementations of algorithms and
data structures for the last seven weeks of Introductory Data
Structures and Algorithms (YSC2229)"

tags: [
  "category:Computer Science/Education/Basic Algorithms and Data Structures"
  "keyword:data structures"
  "keyword:algorithms"
]

authors: [
  "Ilya Sergey <ilya.sergey@yale-nus.edu.sg>"
]

